# PIXEL

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  auth_telegram.py  config.py  main.py  pre-commit-config.yaml  pyproject.toml  settings.json  setup.sh  test_telegram.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
behaviors/alert/: config.json
behaviors/celebrate_birthday/: config.json
behaviors/flinch/: config.json
behaviors/fly/: config.json
behaviors/idle/: config.json
behaviors/play_ball/: config.json
behaviors/rainy/: config.json
behaviors/sleep/: config.json
behaviors/wave/: config.json
docs/superpowers/specs/: 2026-03-12-litellm-personality-engine-design.md
integrations/encouraging/: integration.py
integrations/google_calendar/: __init__.py  auth.py  calendar_event.py  geocoding.py  integration.py  onemap.py  routes.py  settings_ui.py  usage_tracker.py
integrations/habits/: integration.py  store.py
integrations/journal/: dashboard.py  integration.py  prompts.json  settings_ui.py  store.py
integrations/journal/widgets/: calendar_map.py  entry_editor.py  mood_picker.py  stats_surface.py  vault_list.py
integrations/pomodoro/: integration.py  settings_ui.py
integrations/screen_time/: defaults.py  integration.py  store.py  tracker.py  tracker_linux.py  tracker_macos.py  tracker_windows.py
integrations/tasks/: integration.py  store.py
integrations/telegram/: README.md  __init__.py  integration.py
integrations/weather/: __init__.py  integration.py  settings_ui.py
integrations/workspaces/: integration.py  launcher.py
scripts/: auth_google_calendar.py  auth_telegram.py  debug_telegram.py  sprite_pipeline.py  test_google_calendar.py  test_google_maps_apis.py  test_nominatim_api.py  test_onemap_api.py
src/: __init__.py
src/core/: __init__.py  base_integration.py  behavior_registry.py  dashboard_host.py  integration_manager.py  pet_state.py
src/services/: __init__.py  llm_client.py  personality_engine.py  telegram_service.py
src/ui/: __init__.py  bridge.py  bridge_dashboard.py  bridge_habits.py  bridge_journal.py  bridge_pomodoro.py  bridge_screen_time.py  bridge_settings.py  bridge_tasks.py  bridge_workspaces.py  dialog_box.py  haro_window.py  panel_host.py  pet_window.py  pomodoro_theme.py  pomodoro_widget.py  settings_dialog.py  speech_bubble.py  tray_icon.py
src/ui/settings/: __init__.py  dialog.py  theme.py  (+5 more)
src/utils/: sprite_tools.py  startup.py
tests/: conftest.py  test_bridge.py  test_bridge_journal.py  test_bridge_pomodoro.py  test_bridge_settings.py
tests/integrations/: test_gcal_settings_ui.py  test_journal_settings_ui.py  test_pomodoro_settings_ui.py  test_weather_settings_ui.py
tests/services/: test_personality_engine.py
tests/ui/: test_dialog_box.py  test_haro_window.py  test_pet_window.py  test_pomodoro_theme.py  test_pomodoro_widget.py  test_settings_dialog.py  test_settings_dialog_new.py  test_settings_tab_behaviors.py  test_settings_tab_general.py  test_settings_tab_integrations.py  test_settings_tab_personality.py  test_settings_theme.py  test_settings_widgets.py  test_speech_bubble.py
tests/unit/: test_calendar_event.py  test_config.py  test_dashboard_host.py  test_geocoding.py  test_google_calendar_auth.py  test_google_calendar_integration.py  test_habit_store_seed.py  test_journal_integration.py  test_journal_store.py  test_onemap.py  test_pet_state.py  test_pomodoro_integration.py  test_routes.py  test_sprite_pipeline.py  test_startup.py  test_telegram_service.py  test_usage_tracker.py  test_weather_integration.py
ui/: package-lock.json  package.json
ui/src/: App.tsx  index.css
(+49 files in other folders)
